--- a/resources/assets/stylus/styles.styl
+++ b/resources/assets/stylus/styles.styl
@@ -22,15 +22,21 @@ header
 	
 .bg-light
 	background $cool-orange !important
+.dropdown-menu
+	background #393737
 
 .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link
 	color #fff
+
+.show > .nav-link:hover
+	color $cool-orange
 
 .navbar-light .navbar-nav .nav-link.disabled
 	color #ECECEC
 
 .navbar-light .navbar-brand
 	color #fff
+	
 .navzindex
 	z-index 1100
 	a
