--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -159,3 +159,9 @@ footer .footer-copy a:hover {
   width: 100%;
   text-align: center;
 }
+textarea {
+  resize: none;
+}
+main {
+  min-height: 800px;
+}
