agregar funciones en el frontend y backend

--- a/resources/assets/stylus/styles.styl
+++ b/resources/assets/stylus/styles.styl
@@ -149,4 +149,8 @@ textarea {
 	resize none
 }
 main
-	min-height 800px;
+	min-height 800px
+	
+.form-group 
+	.form-control 
+		width 100% !important
